# git-flow

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  manage.py  pyproject.toml
gitflow/: asgi.py  settings.py  urls.py  wsgi.py
pokemon/: models.py  serializers.py  urls.py  views.py
pokemon/fixtures/: pokemon_fixture.json
pokemon/migrations/: 0001_initial.py  0002_color.py  0002_pokemon_species_pokemon_sprites.py  0002_pokemon_test_field.py  0003_color_color.py  0003_pokemon_waka_waka.py  0003_pokemontype.py  0004_pokemon_waka_waka.py  0004_pokemontype_new_field.py  0005_merge_20241212_1257.py  max_migration.txt
